cal.css
ul {
    list-style-type: none;
    font-family: 'Nunito', sans-serif;
}


/* Month header */

.calendar {
    padding-top: 50px;
}

.month {
    padding: 70px 25px;
    background: #2ebdff;
    text-align: center;
    font-family: 'Nunito', sans-serif;
}


/* Month list */

.month ul {
    margin: 0;
    padding: 0;
}

.month ul li {
    color: white;
    font-size: 20px;
    text-transform: uppercase;
    letter-spacing: 3px;
}


/* Previous button inside month header */

.month .prev {
    float: left;
    width: 28px;
    height: 28px;
    padding: 5px;
    margin-top: 5px;
    border-radius: 50%;
    cursor: pointer;
}


/* Next button */

.month .next {
    float: right;
    width: 28px;
    height: 28px;
    padding: 5px;
    padding-left: 7px;
    padding-right: 4px;
    margin-top: 5px;
    border-radius: 50%;
    cursor: pointer;
}


/* Weekdays (Mon-Sun) */

.weekdays {
    margin: 0;
    padding: 10px 0;
    background-color: #ddd;
}

.weekdays li {
    display: inline-block;
    width: 13.6%;
    color: #666;
    text-align: center;
}


/* Days (1-31) */

.days {
    padding: 20px 0 0 0;
    background: #eee;
    margin: 0;
}

.days li {
    list-style-type: none;
    display: inline-block;
    width: 13.6%;
    text-align: center;
    margin-bottom: 30px;
    font-size: 12px;
    color: #777;
}


/* Highlight the "current" day */

.days li .active {
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 10px;
    padding-right: 10px;
    background: #2ebdff;
    color: white !important;
    border-radius: 5px;
    cursor: pointer;
}

.prev:hover {
    background: #5dccff;
}

.next:hover {
    background: #5dccff;
}

.inactive {
    padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 10px;
    padding-right: 10px;
    border-radius: 5px;
    cursor: pointer;
}

.inactive:hover {
    background: rgb(221, 221, 221);
}

#spacer1,
#spacer2,
#spacer3,
#spacer4,
#spacer5,
#spacer6 {
    color: #eee !important;
}

#day_title {
    margin-top: 20px;
    background: #2ebdff;
    color: white;
    font-family: 'Nunito', sans-serif;
    padding: 20px;
    letter-spacing: 2px;
    text-align: center;
}

.cal {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    font-family: 'Nunito', sans-serif;
}

table {
    width: 100%;
    background: #eee;
    font-family: 'Nunito', sans-serif;
}

tr:nth-child(even) th {
    color: #666;
    font-weight: normal;
}

tr {
    padding: 50px 0px;
    font-family: 'Nunito', sans-serif;
}

th,
td {
    padding-top: 0px;
    padding-bottom: 0.8rem;
    padding-right: 1rem;
    padding-left: 1rem;
}

th {
    font-weight: normal;
    border-top: thin dotted #ccc;
    letter-spacing: 2px;
    font-family: 'Nunito', sans-serif;
    font-size: 10px;
    -webkit-user-select: none;
    /* Safari */
    -moz-user-select: none;
    /* Firefox */
    -ms-user-select: none;
    /* IE10+/Edge */
    user-select: none;
    /* Standard */
}

td {
    font-size: 0.8rem;
    font-weight: bold;
    line-height: 1.4;
    border-radius: 0.2rem;
    transition: opacity 0.3s ease;
    width: 22%;
    border-top: thin dotted #ccc;
    cursor: pointer;
}

td>span {
    font-size: 0.8em;
    font-weight: normal;
    display: block;
    width: 100%;
}

.stage-green {
    background-color: #9CCC65
}

.stage-orange {
    background-color: #FF8A65
}

.stage-blue {
    background-color: #26C6DA
}

.stage-purple {
    background-color: #8763c9;
}

.cols {
    text-align: center;
    color: #333;
    letter-spacing: 2px;
    font-weight: normal;
}

.cols td {
    padding-top: 20px;
}

select {
    margin-top: 20px;
    margin-left: 10px;
    background-color: #eee;
    font-family: 'Nunito', sans-serif;
    font-size: 15px;
    padding: 10px;
}

